<resources>
    <string name="app_name">ApiAiImplementation</string>
    <string name="action_settings">Settings</string>

    <string name="resolved_query">Query : </string>
    <string name="action">Action : </string>
    <string name="parameters">Parameters : </string>
    <string name="contexts">Contexts : </string>
    <string name="response">Response : </string>
    <string name="bh_description">BuyHatke Hackathon</string>
    <string name="bh_accessibility_service_name">BuyHatke Hackathon</string>
</resources>
